# digiflot

./: .gitignore  .rodare.json  MANIFEST.in  README.md  pyproject.toml  requirements
.github/workflows/: release.yml
UML/: classes.dot  events.dot
docs/: CoSiFlot-Scree-001.csv  DigiFlot-pieces.csv  calibrate_sensors_tab.md  camera_tab.md  configuration.json  configuration.md  device_connection.md  dynamic.md  flow_control.md  information_tab.md  installation-rpi.md  installation.md  lidar_tab.md  logs.md  raspi_cam.md  restart_exit.md  run.md  run_tab.md  samples.csv  scheme.csv  setup.md  startTheApp.md  start_tab.md  static.md  user_guide.md  welcome.md
src/: test_lidar_uart.py
src/digiflot/: DigiFlot.py  DigiFlot_stop.sh  classes.dot  samples.csv  samples_default.csv  scheme.csv  scheme_default.csv
src/digiflot.egg-info/: PKG-INFO
src/digiflot/libs/: AtlasI2C.py  SEWcontrolModel.py  __init__.py  atlasSensor.py  atlasSensorWrapper.py  bronkhorstFlowControlModel.py  camAdapter.py  configurationManager.py  controller.py  dahengCamModel.py  dahengCamSubProcess.py  dataForwarder.py  dataForwarderSubProcess.py  devTools.py  dropDownMenu.py  enterProjectWindow.py  eventManager.py  formalHardwareInterface.py  hardwareInfoProvider.py  i2c.py  imageStorage.py  imageStorageSubProcess.py  importInputAnalysis.py  importOutputAnalysis.py  importToDataLakeManager.py  importTrackedDataWindow.py  lidar.py  mqttInterface.py  raspiCamController.py  raspiCamModel.py  raspiCamSubProcess.py  tabViewBronkhorstFlowControl.py  tabViewCalibCamDaheng.py  tabViewCalibCamRaspi.py  tabViewCalibLidar.py  tabViewCalibSensors.py  tabViewInformation.py  tabViewRestartExit.py  tabViewRun.py  tabViewSEWControl.py  (+9 more)
src/digiflot/tests/: testCams2.py  testLiDAR.py
tests/: testTaskModel.py
