[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "digiflot"
version = "1.0.3"
authors = [
  { name="Lucas Pereira", email="l.pereira@hzdr.de" },
  { name="Christian Schmidt"},
]
description = "A digital and modular platform to assist on laboratory flotation experiments and collect relevant information."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE v3.0",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]
[tool.setuptools.dynamic]
dependencies = {file = ["requirements"]}

[tool.setuptools.packages.find]
where= ["src"]

[project.urls]
Homepage = "https://codebase.helmholtz.cloud/pereir41/digifloat"
