[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "digiflot"
dynamic = ["version"]
authors = [
  { name = "Lucas Pereira", email = "l.pereira@hzdr.de" },
  { name = "Christian Schmidt" }
]
description = "A digital and modular platform to assist on laboratory flotation experiments and collect relevant information."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU GENERAL PUBLIC LICENSE v3.0",
    "Operating System :: Linux",
]

dependencies = [
  "numpy",
  "python-vlc",
  "pyzmq",
  "paho-mqtt==1.6.1",
  "psutil",
  "bronkhorst-propar",
  "minimalmodbus",
  "kafka-python-ng",
  "iai-gxipy",
  "PyQt5",
  "pillow",
  "opencv-python-headless",
  "pandas",
  'picamera2; platform_machine == "armv7l" or platform_machine == "aarch64"'
]

[tool.setuptools_scm]
version_scheme = "post-release"

[project.urls]
Homepage = "https://github.com/pereirageomet/digiflot"

